# monolithic_pr2_planner

./: DOC.md  collision_with_wall.yaml
install/: .rosinstall  setup.sh
monolithic_pr2_planner/: CMakeLists.txt  manifest.xml  package.xml
monolithic_pr2_planner/config/: costmap_2d.yaml  pr2_both_arms.yaml  pr2_right_arm.yaml
monolithic_pr2_planner/include/monolithic_pr2_planner/: CollisionSpaceMgr.h  Environment.h  EnvironmentESP.h  OccupancyGridUser.h  ParameterCatalog.h  PathPostProcessor.h  StatsWriter.h
monolithic_pr2_planner/include/monolithic_pr2_planner/ExperimentFramework/: ompl_full_body_planner_node.h  randomStartGoalGenerator.h
monolithic_pr2_planner/include/monolithic_pr2_planner/Heuristics/: 2Dgridsearch.h  AbstractHeuristic.h  BFS2DHeuristic.h  BFS3DHeuristic.h  BaseWithRotationHeuristic.h  DistanceTransform2D.h  EndEffectorHeuristic.h  HeuristicMgr.h  MHABaseHeuristic.h  VoronoiOrientationHeuristic.h
monolithic_pr2_planner/include/monolithic_pr2_planner/MotionPrimitives/: ArmSnapMotionPrimitive.h  ArmTuckMotionPrimitive.h  ArmUntuckMotionPrimitive.h  MotionPrimitivesMgr.h
monolithic_pr2_planner/include/monolithic_pr2_planner/StateReps/: ContArmState.h  ContBaseState.h  GoalState.h  GraphState.h  RobotState.h
monolithic_pr2_planner/src/: CollisionSpaceMgr.cpp  Environment.cpp  EnvironmentESP.cpp  HashManager.cpp  ParameterCatalog.cpp  PathPostProcessor.cpp  StatsWriter.cpp
monolithic_pr2_planner/src/ExperimentFramework/: ompl_full_body_planner_node.cpp  randomStartGoalGenerator.cpp
monolithic_pr2_planner/src/Heuristics/: 2Dgridsearch.cpp  ArmAnglesHeuristic.cpp  BFS2DHeuristic.cpp  BFS2DRotFootprintHeuristic.cpp  BFS3DHeuristic.cpp  BFS3DWithRotationHeuristic.cpp  BaseWithRotationHeuristic.cpp  DistanceTransform2D.cpp  EndEffLocalHeuristic.cpp  EndEffOnlyRotationHeuristic.cpp  EndEffectorHeuristic.cpp  HeuristicMgr.cpp  MHABaseHeuristic.cpp  VoronoiOrientationHeuristic.cpp
monolithic_pr2_planner/src/MotionPrimitives/: ArmAdaptiveMotionPrimitive.cpp  ArmMotionPrimitive.cpp  ArmSnapMotionPrimitive.cpp  ArmTuckMotionPrimitive.cpp  ArmUntuckMotionPrimitive.cpp  MotionPrimitivesMgr.cpp
monolithic_pr2_planner/src/StateReps/: ContArmState.cpp  ContBaseState.cpp  DiscObjectState.cpp  GoalState.cpp  GraphState.cpp  RobotState.cpp
monolithic_pr2_planner/test/: conversions.cpp
monolithic_pr2_planner_node/: CMakeLists.txt  manifest.xml  package.xml  run_all_experiments.sh
monolithic_pr2_planner_node/compute_stats/: compareMethods.m  computeMethodStats.m  computeStats.m  mha_stats.m
monolithic_pr2_planner_node/compute_stats/include/compute_stats/: computePaths.h  consistency.h
monolithic_pr2_planner_node/config/: fbp.rviz  logging_levels.yaml
monolithic_pr2_planner_node/experiments/: fbp_tests.yaml  fbp_tests0.yaml  fbp_tests1.yaml  fbp_tests2.yaml  fbp_tests3.yaml  fbp_tests4.yaml  fbp_tests5.yaml  fbp_tests6.yaml  fbp_tests7.yaml  fbp_tests8.yaml  fbp_tests9.yaml  tableObstacles1.yaml  tableObstacles2.yaml  tableObstacles3.yaml  tableObstacles4.yaml  tableObstacles6.yaml  tableObstacles8.yaml  tableObstacles9.yaml
monolithic_pr2_planner_node/include/monolithic_pr2_planner_node/: CollisionSpaceInterface.h  EnvInterfaces.h  StatsWriter.h  fbp_stat_writer.h  interactFullBodyPlanner.h  node.h  ompl_pr2_planner.h
monolithic_pr2_planner_node/launch/: launch_node.launch  launch_node_debugger.launch  run_experiments.launch
monolithic_pr2_planner_node/maps/: max_kitchen.dae  max_kitchen.stl
monolithic_pr2_planner_node/maps/mapping/: nsh_first_floor.yaml
monolithic_pr2_planner_node/src/: CollisionSpaceInterface.cpp  EnvInterfaces.cpp  StatsWriter.cpp  interactFullBodyPlanner.cpp  node.cpp  ompl_pr2_planner.cpp  publishSTLToOctomap.cpp  runSimulationFromFile.cpp  run_demo.cpp  run_simulations.cpp  run_tests.cpp  saveProjectedMap.cpp  testExecute.cpp  testPlanningRequest.cpp
monolithic_pr2_planner_node/src/monolithic_pr2_planner_node/srv/: _GetMobileArmPlan.py
monolithic_pr2_planner_node/srv/: GetMobileArmPlan.srv
